unpackaged/main/default/objects/Contact/fields/FON_Is_Primary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Primary_Billing_Contact__c</fullName>
    <description>Automatically checks the box when a Contact is populated in the Primary Billing Contact lookup field housed on the Account record</description>
    <formula>Id ==  Account.FON_Primary_Billing_Contact__r.Id</formula>
    <inlineHelpText>Automatically checks the box when a Contact is populated in the Primary Billing Contact lookup field housed on the Account record</inlineHelpText>
    <label>Is Primary Billing Contact</label>
    <type>Checkbox</type>
</CustomField>