unpackaged/main/default/objects/Contact/fields/FON_Last_Login_to_eStore__c.field-meta.xml
<CustomField>
    <fullName>FON_Last_Login_to_eStore__c</fullName>
    <inlineHelpText>The last date/time a user logged into the Member Portal</inlineHelpText>
    <label>Last Login to eStore</label>
    <type>DateTime</type>
</CustomField>