unpackaged/main/default/objects/Contact/fields/FON_Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>FON_Last_Transaction_Date__c</fullName>
    <inlineHelpText>Date of the most recent transaction (the last purchase a Contact made)</inlineHelpText>
    <label>Last Transaction Date</label>
    <type>Date</type>
</CustomField>