unpackaged/main/default/objects/Contact/fields/FON_LP_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>FON_LP_Coordinator__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually populated by TCH if the information is known. Will need to manually assign a badge for special permissions</inlineHelpText>
    <label>Is LP Coordinator</label>
    <type>Checkbox</type>
</CustomField>