unpackaged/main/default/objects/Contact/fields/FON_Membership_Status_Alert__c.field-meta.xml
<CustomField>
    <fullName>FON_Membership_Status_Alert__c</fullName>
    <formula>IF(OR(NOT(ISBLANK(TEXT( Account.TCH_Membership_Type__c ))), Account.FON_Parent_Type_is_Sponsoring_Org__c,  Account.FON_Parent_Type_is_Licensing_Org__c), &quot;Your Company is Active&quot;, &quot;Your Company is Not Active&quot;)</formula>
    <label>Membership Status Alert</label>
    <type>Text</type>
</CustomField>