unpackaged/main/default/objects/Contact/fields/FON_My_Digital_Material_URL__c.field-meta.xml
<CustomField>
    <fullName>FON_My_Digital_Material_URL__c</fullName>
    <inlineHelpText>URL takes customers to a new page where they can access their purchased digital materials</inlineHelpText>
    <label>My Digital Material URL</label>
    <type>Url</type>
</CustomField>