unpackaged/main/default/objects/Contact/fields/FON_NCP_Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>FON_NCP_Candidate_ID__c</fullName>
    <inlineHelpText>*System Generated* Candidate ID for exam registration. Always 11 digits long. Infromation coming from the Attendee record</inlineHelpText>
    <label>NCP Candidate ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>