unpackaged/main/default/objects/Contact/fields/FON_NCP_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>FON_NCP_Display_Name__c</fullName>
    <description>This is for NCP Connect, feeds into the NCP Directory. The official name the user would like to display</description>
    <label>NCP Directory Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>