unpackaged/main/default/objects/Contact/fields/FON_Nickname_Alias__c.field-meta.xml
<CustomField>
    <fullName>FON_Nickname_Alias__c</fullName>
    <description>Used for event badging if someone prefers to be known by a different name than their legal name. i.e. William prefers Bill.</description>
    <inlineHelpText>Used for event badging if someone prefers to be known by a different name than their legal name. i.e. William prefers Bill.</inlineHelpText>
    <label>Nickname/Alias</label>
    <length>60</length>
    <type>Text</type>
</CustomField>