unpackaged/main/default/objects/Contact/fields/FON_Ops_Committee_Alternate__c.field-meta.xml
<CustomField>
    <fullName>FON_Ops_Committee_Alternate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually populated by TCH if the information is known. Will need to manually assign a badge for special permissions</inlineHelpText>
    <label>Is Ops Committee Alternate</label>
    <type>Checkbox</type>
</CustomField>