unpackaged/main/default/objects/Contact/fields/FON_Other_Reason_for_Rules_Interest__c.field-meta.xml
<CustomField>
    <fullName>FON_Other_Reason_for_Rules_Interest__c</fullName>
    <inlineHelpText>Free text. Contact has the option to specify why they are interested in ECCHO Rules if different from what has been provided.</inlineHelpText>
    <label>Other Reason for ECCHO Rules Interest</label>
    <type>TextArea</type>
</CustomField>