unpackaged/main/default/objects/Contact/fields/FON_Past_EB_Member__c.field-meta.xml
<CustomField>
    <fullName>FON_Past_EB_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past EB Member</label>
    <type>Checkbox</type>
</CustomField>