unpackaged/main/default/objects/Contact/fields/FON_Private_Adj_List__c.field-meta.xml
<CustomField>
    <fullName>FON_Private_Adj_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the user will appear in the Escalation Contact Directory</inlineHelpText>
    <label>Escalation Contact</label>
    <type>Checkbox</type>
</CustomField>