unpackaged/main/default/objects/Contact/fields/FON_Public_Adj_List__c.field-meta.xml
<CustomField>
    <fullName>FON_Public_Adj_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the user will be sent an email via TCH&#39;s Marketing Platform</inlineHelpText>
    <label>Public Adj List</label>
    <type>Checkbox</type>
</CustomField>