unpackaged/main/default/objects/Contact/fields/FON_R_A_Group__c.field-meta.xml
<CustomField>
    <fullName>FON_R_A_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the user is a current member of the Exceptions &amp; Fraud working group</inlineHelpText>
    <label>Exceptions &amp; Fraud WG</label>
    <type>Checkbox</type>
</CustomField>