unpackaged/main/default/objects/Contact/fields/FON_SM_Representative__c.field-meta.xml
<CustomField>
    <fullName>FON_SM_Representative__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually populated by TCH if the information is known. Will need to manually assign a badge for special permissions</inlineHelpText>
    <label>Is SM Representative</label>
    <type>Checkbox</type>
</CustomField>