unpackaged/main/default/objects/Contact/fields/Functional_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Functional_Responsibilities__c</fullName>
    <label>Functional Responsibilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance/Audit/Legal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payment Ops (Check/ACH/Wire/Card)</fullName>
            </value>
            <value>
                <fullName>Product Mgmt/Cash mgmt/Treasury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>