unpackaged/main/default/objects/Contact/fields/Hours_of_Operation__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Operation__c</fullName>
    <description>Working hours of Contact</description>
    <label>Office Hours</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>