unpackaged/main/default/objects/Contact/fields/I_agree_to_terms_and_Conditions_above__c.field-meta.xml
<CustomField>
    <fullName>I_agree_to_terms_and_Conditions_above__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I agree to terms and Conditions above</label>
    <type>Checkbox</type>
</CustomField>