unpackaged/main/default/objects/Contact/fields/Is_Business_Committee_Champion__c.field-meta.xml
<CustomField>
    <fullName>Is_Business_Committee_Champion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Business Committee Champion</label>
    <type>Checkbox</type>
</CustomField>