unpackaged/main/default/objects/Contact/fields/Is_Exam_Taker__c.field-meta.xml
<CustomField>
    <fullName>Is_Exam_Taker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exam Taker</label>
    <type>Checkbox</type>
</CustomField>