unpackaged/main/default/objects/Contact/fields/Is_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if checked, user requested access through external link.</inlineHelpText>
    <label>Is Lead</label>
    <type>Checkbox</type>
</CustomField>