unpackaged/main/default/objects/Contact/fields/Legacy_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Contact ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>