unpackaged/main/default/objects/Contact/fields/Lifetime_Donations__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Donations__c</fullName>
    <label>Lifetime Donations</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>