unpackaged/main/default/objects/Contact/fields/Lifetime_Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Total_Spent__c</fullName>
    <label>Lifetime Total Spent</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>