unpackaged/main/default/objects/Contact/fields/NCP_Class_Instructor__c.field-meta.xml
<CustomField>
    <fullName>NCP_Class_Instructor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCP Class Instructor</label>
    <type>Checkbox</type>
</CustomField>