unpackaged/main/default/objects/Contact/fields/NCP_Dir_State__c.field-meta.xml
<CustomField>
    <fullName>NCP_Dir_State__c</fullName>
    <formula>TEXT(MailingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NCP Directory State</label>
    <type>Text</type>
</CustomField>