unpackaged/main/default/objects/Contact/fields/NCP_Directory_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>NCP_Directory_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this NCP does not want to be included in the public directory</description>
    <inlineHelpText>If checked, this NCP does not want to be included in the public directory</inlineHelpText>
    <label>NCP Directory Opt Out</label>
    <type>Checkbox</type>
</CustomField>