unpackaged/main/default/objects/Contact/fields/NCP_Forum_Directory__c.field-meta.xml
<CustomField>
    <fullName>NCP_Forum_Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this person will appear on the NCP Forum Directory</inlineHelpText>
    <label>NCP Forum Directory</label>
    <type>Checkbox</type>
</CustomField>