unpackaged/main/default/objects/Contact/fields/NCP_QoD_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>NCP_QoD_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Candidate does not wish to receive QoD emails</description>
    <inlineHelpText>If checked, candidate does not wish to receive QoD emails</inlineHelpText>
    <label>NCP QoD Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>