unpackaged/main/default/objects/Contact/fields/OrderApi__Assistant_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assistant_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Call the Contact&#39;s Assistant Phone.</description>
    <inlineHelpText>Do Not Call the Contact&#39;s Assistant Phone.</inlineHelpText>
    <label>Assistant Do Not Call</label>
    <type>Checkbox</type>
</CustomField>