unpackaged/main/default/objects/Contact/fields/OrderApi__Assistant_Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assistant_Email__c</fullName>
    <description>The Contact&#39;s Assistant Email address.</description>
    <inlineHelpText>The Contact&#39;s Assistant Email address.</inlineHelpText>
    <label>Assistant Email</label>
    <type>Email</type>
</CustomField>