unpackaged/main/default/objects/Contact/fields/OrderApi__Assistant_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assistant_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Contact&#39;s Assistant will not receive email communications.</description>
    <inlineHelpText>The Contact&#39;s Assistant will not receive email communications.</inlineHelpText>
    <label>Assistant Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>