unpackaged/main/default/objects/Contact/fields/OrderApi__Badges__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Badges__c</fullName>
    <description>This field lists all the active badges in alphabetical order including all badges inherited from it&#39;s parent account or it&#39;s parent account through flowdown (when enabled)</description>
    <inlineHelpText>This field lists all the active badges in alphabetical order including all badges inherited from it&#39;s parent account or it&#39;s parent account through flowdown (when enabled)</inlineHelpText>
    <label>Badges</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>