unpackaged/main/default/objects/Contact/fields/OrderApi__Edit_Community_Company_Info__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Edit_Community_Company_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, contact can edit the Company Info fields in the community.</description>
    <inlineHelpText>When checked, contact can edit the Company Info fields in the community.</inlineHelpText>
    <label>Edit Community Company Info</label>
    <type>Checkbox</type>
</CustomField>