unpackaged/main/default/objects/Contact/fields/OrderApi__Home_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Home_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Call the Contact&#39;s Home Phone.</description>
    <inlineHelpText>Do Not Call the Contact&#39;s Home Phone.</inlineHelpText>
    <label>Home Do Not Call</label>
    <type>Checkbox</type>
</CustomField>