unpackaged/main/default/objects/Contact/fields/OrderApi__Is_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Primary_Contact__c</fullName>
    <formula>Id == Account.OrderApi__Primary_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Primary Contact</label>
    <type>Checkbox</type>
</CustomField>