unpackaged/main/default/objects/Contact/fields/OrderApi__Mobile_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Mobile_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Call the Contact&#39;s Mobile Phone.</description>
    <inlineHelpText>Do Not Call the Contact&#39;s Mobile Phone.</inlineHelpText>
    <label>Mobile Do Not Call</label>
    <type>Checkbox</type>
</CustomField>