unpackaged/main/default/objects/Contact/fields/OrderApi__Other_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Other_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do Not Call the Contact&#39;s Other Phone.</description>
    <inlineHelpText>Do Not Call the Contact&#39;s Other Phone.</inlineHelpText>
    <label>Other Do Not Call</label>
    <type>Checkbox</type>
</CustomField>