unpackaged/main/default/objects/Contact/fields/OrderApi__Other_Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Other_Email__c</fullName>
    <description>Other/Additional Email for the Contact.</description>
    <inlineHelpText>Other/Additional Email for the Contact.</inlineHelpText>
    <label>Other Email</label>
    <type>Email</type>
</CustomField>