unpackaged/main/default/objects/Contact/fields/OrderApi__Other_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Other_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact will not receive communications to their Other Email.</description>
    <inlineHelpText>Contact will not receive communications to their Other Email.</inlineHelpText>
    <label>Other Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>