unpackaged/main/default/objects/Contact/fields/OrderApi__Outstanding_Credits__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Outstanding_Credits__c</fullName>
    <description>** System Calculated ** The sum of the Credit Memo Balance Due field for all Credit Memos linked to this customer.</description>
    <inlineHelpText>** System Calculated ** The sum of the Credit Memo Balance Due field for all Credit Memos linked to this customer.</inlineHelpText>
    <label>Outstanding Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>