unpackaged/main/default/objects/Contact/fields/OrderApi__Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Personal_Email__c</fullName>
    <description>Personal/Home Email address for the Contact.</description>
    <inlineHelpText>Personal/Home Email address for the Contact.</inlineHelpText>
    <label>Personal Email</label>
    <type>Email</type>
</CustomField>