unpackaged/main/default/objects/Contact/fields/OrderApi__Personal_Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Personal_Email_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contact will not receive communications to their Personal Email.</description>
    <inlineHelpText>Contact will not receive communications to their Personal Email.</inlineHelpText>
    <label>Personal Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>