unpackaged/main/default/objects/Contact/fields/OrderApi__Potential_Duplicate_Contacts__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Potential_Duplicate_Contacts__c</fullName>
    <description>This field identifies a list of contact ids that are potentially related duplicate contacts in the system.</description>
    <label>Potential Duplicate Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>