unpackaged/main/default/objects/Contact/fields/OrderApi__Preferred_Currency__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Preferred_Currency__c</fullName>
    <description>Currency last selected by contact in the community.</description>
    <inlineHelpText>Currency last selected by contact in the community.</inlineHelpText>
    <label>Active Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>