unpackaged/main/default/objects/Contact/fields/OrderApi__Preferred_Email_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Preferred_Email_Type__c</fullName>
    <description>**Defaults to Personal Email** Select the Preferred Email Type for the Contact. The value of the corresponding email field will update the standard Contact Email field.</description>
    <inlineHelpText>**Defaults to Personal Email** Select the Preferred Email Type for the Contact. The value of the corresponding email field will update the standard Contact Email field.</inlineHelpText>
    <label>Preferred Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>