unpackaged/main/default/objects/Contact/fields/OrderApi__Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Preferred_Language__c</fullName>
    <description>Language the contact had selected in the community or, for unauthenticated contacts, during contact creation</description>
    <inlineHelpText>Language the contact had selected in the community or, for unauthenticated contacts, during contact creation</inlineHelpText>
    <label>Active Language</label>
    <length>30</length>
    <type>Text</type>
</CustomField>