unpackaged/main/default/objects/Contact/fields/OrderApi__Preferred_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Preferred_Phone_Type__c</fullName>
    <description>**Defaults to Personal Email** Select the Preferred Phone Type for the Contact. The value of the corresponding phone field will update the standard Contact Phone field.</description>
    <inlineHelpText>**Defaults to Personal Email** Select the Preferred Phone Type for the Contact. The value of the corresponding phone field will update the standard Contact Phone field.</inlineHelpText>
    <label>Preferred Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
                <default>true</default>
                <label>Work</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>