unpackaged/main/default/objects/Contact/fields/OrderApi__Price_Rules_Usages__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Price_Rules_Usages__c</fullName>
    <description>** SYSTEM ** JSON of price rules</description>
    <inlineHelpText>** SYSTEM ** JSON of price rules</inlineHelpText>
    <label>SYSTEM</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>