unpackaged/main/default/objects/Contact/fields/OrderApi__Sync_Address_Billing__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sync_Address_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will overwrite the parent account&#39;s billing address with the value of the contact&#39;s mailing address. Default is unchecked.</description>
    <inlineHelpText>When checked, the system will overwrite the parent account&#39;s billing address with the value of the contact&#39;s mailing address. Default is unchecked.</inlineHelpText>
    <label>Sync Address w/Account (Billing)</label>
    <type>Checkbox</type>
</CustomField>