unpackaged/main/default/objects/Contact/fields/OrderApi__Sync_Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sync_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will overwrite the parent account&#39;s phone with the value of the contact&#39;s preferred phone. Default is unchecked.</description>
    <inlineHelpText>When checked, the system will overwrite the parent account&#39;s phone with the value of the contact&#39;s preferred phone. Default is unchecked.</inlineHelpText>
    <label>Sync Preferred Email w/Account</label>
    <type>Checkbox</type>
</CustomField>